# SharedIntegrals

./: CMakeLists.txt  README.md  TODO  build.sh  valgrind.sh
.github/workflows/: cmake.yml
include/: blocking_queue.hpp  children.hpp  fd_helpers.hpp  functions.hpp  help_types.hpp  integral_solver.hpp  integral_task.hpp  linear_allocator.hpp  managed_shared_memory.hpp  name_address.hpp  read_add_addresses_map.hpp  sem_lock_guard.hpp  semaphore.hpp  shared_memory.hpp  shared_memory_linear_allocator.hpp  shared_memory_object.hpp  shared_memory_queue.hpp  shared_memory_stack.hpp  unsafe_shared_memory.hpp  unsafe_shared_object.hpp  unsafe_stack.hpp
src/: children.cpp  fd_helpers.cpp  functions.cpp  integral_task.cpp  linear_allocator.cpp  managed_shared_memory.cpp  multi.cpp  read_add_addresses_map.cpp  sem_lock_guard.cpp  semaphore.cpp  shared_memory.cpp  shared_memory_linear_allocator.cpp  shared_memory_object.cpp  single.cpp  test.cpp  test_fork_shared_memory.cpp  test_managed_shared_memory.cpp  test_own.cpp  test_shm_linear_allocator.cpp  unsafe_shared_memory.cpp
